rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nodejs-app
  namespace: nodejs-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-app
          image: 196549506578.dkr.ecr.ap-south-1.amazonaws.com/nodejs-app:10-7a55330
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
  strategy:
    canary:
      # These two services are managed by Argo Rollouts
      stableService: nodejs-app-stable
      canaryService: nodejs-app-canary
      trafficRouting:
        alb:
          ingress: nodejs-app
          servicePort: 80
      steps:
        - setWeight: 10        # Send 10% traffic to canary
        - pause: {duration: 2m}
        - setWeight: 50        # Send 50% traffic to canary
        - pause: {duration: 2m}
        - setWeight: 100       # Full rollout
