service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-stable
  namespace: nodejs-app
spec:
  selector:
    app: nodejs-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
